styling index.html

--- a/index.html
+++ b/index.html
@@ -2,10 +2,46 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@300&family=Roboto:ital,wght@1,300&display=swap" rel="stylesheet">
+
+    <style>
+        h1 {
+            font-family: 'JetBrains Mono', monospace;
+            font-style: normal;
+            font-weight: 300;
+        }
+        h3 {
+            font-family: 'Roboto', sans-serif;
+            font-weight: 300;
+        }
+        h4 {
+            font-family: 'Roboto', sans-serif;
+            font-style: italic;
+            font-weight: 300;
+        }
+
+        body {
+            border: 3px solid black;
+            outline: #4d3280 solid 30px;
+            margin-right: 150px;
+            margin-left: 150px;
+            padding: 10px;
+            text-align: center;
+        }
+    </style>
+
     <title>jmbdev homepage</title>
 </head>
 <body>
-    <h1>jmbdev homepage</h1>
-    <h4>under construction</h4>
+    <p><h1>jmbdev homepage</h1>
+    <p><h3><strong>* under construction *</strong></h3>
+    <div><h4>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut <br />
+    labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris<br />
+    nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit<br />
+    esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt<br />
+    in culpa qui officia deserunt mollit anim id est laborum."</h4></div>
 </body>
 </html>
